--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
         <!-- Repite hasta 10 iconos... -->
     </section>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
