--- a/index.html
+++ b/index.html
@@ -12,70 +12,26 @@
     </header>
 
     <section class="icon-grid">
-        <!-- Ejemplo de iconos con botón de descarga y animación -->
+        <!-- Icono repetido con botón de descarga y barra de progreso -->
         <div class="icon-card">
-            <img src="tienda.png">
-            <p>Icon 1</p>
-            <button class="download-btn" data-icon="tienda.png">Download</button>
-            <div class="progress-bar" id="progress-1"></div>
+            <img src="memes.png" alt="Memes Icon">
+            <p>Memes Icon</p>
+            <button class="download-btn" data-icon="memes.png">Download</button>
+            <div class="progress-bar">
+                <div class="progress"></div>
+            </div>
         </div>
         <div class="icon-card">
-            <img src="web.png">
-            <p>Icon 2</p>
+            <img src="web.png" alt="Web Icon">
+            <p>Web Icon</p>
             <button class="download-btn" data-icon="web.png">Download</button>
-            <div class="progress-bar" id="progress-2"></div>
+            <div class="progress-bar">
+                <div class="progress"></div>
+            </div>
         </div>
-  <div class="icon-card">
-            <img src="memes.png">
-            <p>Icon 1</p>
-            <button class="download-btn" data-icon="memes">Download</button>
-            <div class="progress-bar" id="progress-1"></div>
-        </div>
-        <div class="icon-card">
-            <img src="https://i.ibb.co/Kx45TZR/IMG-20240927-185755.png" alt="Custom Icon">
-            <p>Icon 2</p>
-            <button class="download-btn" data-icon="icon2.svg">Download</button>
-            <div class="progress-bar" id="progress-2"></div>
-        </div>
-  <div class="icon-card">
-            <img src="https://i.ibb.co/Kx45TZR/IMG-20240927-185755.png" alt="Custom Icon">
-            <p>Icon 1</p>
-            <button class="download-btn" data-icon="icon1.svg">Download</button>
-            <div class="progress-bar" id="progress-1"></div>
-        </div>
-        <div class="icon-card">
-            <img src="https://i.ibb.co/Kx45TZR/IMG-20240927-185755.png" alt="Custom Icon">
-            <p>Icon 2</p>
-            <button class="download-btn" data-icon="icon2.svg">Download</button>
-            <div class="progress-bar" id="progress-2"></div>
-        </div>
-  <div class="icon-card">
-            <img src="https://i.ibb.co/Kx45TZR/IMG-20240927-185755.png" alt="Custom Icon">
-            <p>Icon 1</p>
-            <button class="download-btn" data-icon="icon1.svg">Download</button>
-            <div class="progress-bar" id="progress-1"></div>
-        </div>
-        <div class="icon-card">
-            <img src="https://i.ibb.co/Kx45TZR/IMG-20240927-185755.png" alt="Custom Icon">
-            <p>Icon 2</p>
-            <button class="download-btn" data-icon="icon2.svg">Download</button>
-            <div class="progress-bar" id="progress-2"></div>
-        </div>
-  <div class="icon-card">
-            <img src="https://i.ibb.co/Kx45TZR/IMG-20240927-185755.png" alt="Custom Icon">
-            <p>Icon 1</p>
-            <button class="download-btn" data-icon="icon1.svg">Download</button>
-            <div class="progress-bar" id="progress-1"></div>
-        </div>
-        <div class="icon-card">
-            <img src="https://i.ibb.co/Kx45TZR/IMG-20240927-185755.png" alt="Custom Icon">
-            <p>Icon 2</p>
-            <button class="download-btn" data-icon="icon2.svg">Download</button>
-            <div class="progress-bar" id="progress-2"></div>
-        </div>
-        <!-- Repite hasta 10 iconos... -->
+        <!-- Repite hasta 10 iconos si lo necesitas -->
     </section>
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
