--- a/index.html
+++ b/index.html
@@ -15,19 +15,14 @@
         <div class="icon-card">
             <img src="memes.png" alt="Memes Icon">
             <p>Memes Icon</p>
-            <button class="download-btn" data-icon="memes.png">Download</button>
-            <div class="progress-bar">
-                <div class="progress"></div>
-            </div>
+            <a href="memes.png" download="memes.png" class="download-btn">Descargar</a>
         </div>
         <div class="icon-card">
             <img src="web.png" alt="Web Icon">
             <p>Web Icon</p>
-            <button class="download-btn" data-icon="web.png">Download</button>
-            <div class="progress-bar">
-                <div class="progress"></div>
-            </div>
+            <a href="web.png" download="web.png" class="download-btn">Descargar</a>
         </div>
+        <!-- Agrega más iconos según sea necesario -->
     </section>
 
     <script src="app.js"></script>
