--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
             <p>Web Icon</p>
             <a href="web.png" download="web.png" class="download-btn">Descargar</a>
         </div>
+   </section>
+        
+    <section class="icon-grid">
         <div class="icon-card">
             <img src="tienda.png" alt="Tienda Icon">
-            <p>Memes Icon</p>
+            <p>Tienda Icon</p>
             <a href="tienda.png" download="tienda.png" class="download-btn">Descargar</a>
         </div>
         <div class="icon-card">
             <img src="nota.png" alt="Nota Icon">
-            <p>Web Icon</p>
+            <p>Nota Icon</p>
             <a href="nota.png" download="nota.png" class="download-btn">Descargar</a>
         </div>
         <!-- Agrega más iconos según sea necesario -->
